--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
     <div id="menuBtn">
         <img src="menu.png" id="menu">
     </div>
-     
+     <!--end of menu bar-->
+     <!--topic 1-->
     <section id="event">
         <div class="title-text">
+            <!--heading -->
             <h1><span>Upcoming Events</span></h1>
         </div>
         <div class="box">
             <div class="events">
                 <div class="event-A">
+                    <!--heading 1-->
                     <h1><a href="" class="image">Agora Gallery</a></h1>
                     <br>
                     <p>Every month, hundreds of galleries add newly available works by thousands of artists
@@ -61,6 +64,7 @@
         <div class="box">
             <div class="events">
                 <div class="event-A">
+                    <!--heading 2-->
                     <h1><a href="" class="image">HOLLIS TAGGART</a></h1>
                     <br>
                     <p>Hollis Taggart was founded in 1979, with a mission to present museum-quality works of art,
@@ -79,6 +83,7 @@
         <div class="box">
             <div class="events">
                 <div class="event-A">
+                    <!--heading 3-->
                     <h1><a href="" class="image">Alexandre Gallery</a></h1>
                     <br>
                     <p>Brooklyn-based artist Zoe McGuire (b. 1996) has garnered a reputation for her
@@ -96,9 +101,11 @@
         <br><br><hr><br>
         </div>
     </section>
-
+    <!--end of topic 2-->
+    <!--topic 2-->
     <section id="ar">
         <div class="title-text">
+            <!--heading-->
             <h1>Around The World</h1>
         </div>
         <div class="ar-box">
@@ -140,6 +147,8 @@
             </div>
         </div>
     </section>
+    <!--end of topic 2-->
+    <!--footer-->
     <footer class="footer-dist">
         <div class="footer-left">
             <img src="icon.png">
@@ -179,11 +188,12 @@
             </div>
         </div>
     </footer>
-
+    <!--end of footer-->
 
     
     <script>
-        var menuBtn = document.getElementById("menuBtn")
+        /*menu button*/
+        var menuBtn = document.getElementById("menuBtn") 
         var sideNav = document.getElementById("sideNav")
         var menu = document.getElementById("menu")
 
