--- a/exhibit.html
+++ b/exhibit.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
+    <!--landing page-->
     <section id="banner">
         <img src="icon.png" class="icon">
         <div class="banner-text">
             <h1>Exhibitions</h1>
         </div>
     </section>
+    <!--menu bar-->
     <div id="sideNav">
         <nav>
             <ul>
@@ -26,9 +28,12 @@
             </ul>
         </nav>
     </div>
+    <!--menu button-->
     <div id="menuBtn">
         <img src="menu.png" id="menu">
     </div>
+    <!--end of landing page-->
+<!--topic 1-->
 <section class="color">
     <section id="event">
         <div class="full-img" id="fullImgBox">
@@ -50,6 +55,7 @@
             <img src="e12.jpg" onclick="openFullImg(this.src)">
         </div>
     </section>
+    <!--context-->
     <section id="exhibit">
         <div class="title-text">
             <h1><span class="underline">Exhibits</span></h1>
@@ -98,10 +104,14 @@
             </div>
         </div>
     </section>
+    <!--end of topic 1-->
+    <!--topic 2-->
     <section class="sec">
+        <!--heading-->
         <div class="title">
-            <h1><span class="underline">More about exhibits...</span></h1>
+            <h1>More about exhibits...</h1>
         </div>
+        <!--context-->
         <div class="container">
             <div class="gallery">
                 <div class="img-box"><h3>Alessandira Aita</h3></div>
@@ -147,7 +157,7 @@
                 </div>
             </div>
         </div>
-        
+        <!--menu-preview-->
         <div class="menu-preview">
             <div class="preview active" data-target="c-1">
                 <i class="fa-solid fa-xmark"></i>
@@ -241,6 +251,8 @@
             </div>
         </div>
     </section>
+    <!--end of topic 2-->
+    <!--footer-->
     <footer class="footer-dist">
         <div class="footer-left">
             <img src="icon.png">
@@ -281,6 +293,7 @@
         </div>
     </footer>
 </section>
+<!--end of footer-->
 
 
 
