--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
+    <!--landing page-->
     <section id="banner">
         <img src="icon.png" class="icon">
         <section class="contact">
@@ -18,6 +19,7 @@
                  adipiscing elit, sed do eiusmod tempor incididunt 
                  ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
+            <!--context-->
             <div class="container">
                 <div class="contactInfo">
                     <div class="box">
@@ -65,6 +67,8 @@
             </div>
         </section>
     </section>
+    <!--end of context-->
+    <!--menu bar-->
     <div id="sideNav">
         <nav>
             <ul>
@@ -78,6 +82,8 @@
     <div id="menuBtn">
         <img src="menu.png" id="menu">
     </div>
+    <!--end of menu bar-->
+    <!--end of landing page-->
     
 
 
